fix(command-menu): `input` backgound overflow

--- a/styles/command.scss
+++ b/styles/command.scss
@@ -25,7 +25,7 @@
   font-size: 20px;
   padding: 8px 16px;
   outline: none;
-  background: var(--gray2);
+  background: transparent;
   color: var(--gray12);
 
   &::placeholder {
